// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EntityGenerator advanced index options (MSSQL) > generates entities with clustered index > clustered index 1`] = `
[
  "import { defineEntity, p } from '@mikro-orm/core';

export class TestClustered {
  id!: number;
  sortKey!: number;
}

export const TestClusteredSchema = defineEntity({
  class: TestClustered,
  indexes: [{ name: 'clustered_idx', properties: ['sortKey'], clustered: true }],
  properties: {
    id: p.integer().primary().autoincrement(false),
    sortKey: p.integer(),
  },
});
",
]
`;

exports[`EntityGenerator advanced index options (MSSQL) > generates entities with disabled index > disabled index 1`] = `
[
  "import { defineEntity, p } from '@mikro-orm/core';

export class TestDisabled {
  id!: number;
  name!: string;
}

export const TestDisabledSchema = defineEntity({
  class: TestDisabled,
  indexes: [{ name: 'disabled_idx', properties: ['name'], disabled: true }],
  properties: {
    id: p.integer().primary(),
    name: p.string().columnType('varchar(255)'),
  },
});
",
]
`;

exports[`EntityGenerator advanced index options (MSSQL) > generates entities with disabled unique constraint > disabled unique 1`] = `
[
  "import { defineEntity, p } from '@mikro-orm/core';

export class TestDisabledUnique {
  id!: number;
  email!: string;
}

export const TestDisabledUniqueSchema = defineEntity({
  class: TestDisabledUnique,
  uniques: [
    { name: 'disabled_unique_idx', properties: ['email'], disabled: true },
  ],
  properties: {
    id: p.integer().primary(),
    email: p.string().columnType('varchar(255)'),
  },
});
",
]
`;

exports[`EntityGenerator advanced index options (MariaDB) > generates entities with fulltext index > fulltext index 1`] = `
[
  "import { defineEntity, p } from '@mikro-orm/core';

export class TestFulltext {
  id!: number;
  content!: string;
}

export const TestFulltextSchema = defineEntity({
  class: TestFulltext,
  indexes: [{ name: 'fulltext_idx', properties: ['content'], type: 'fulltext' }],
  properties: {
    id: p.integer().primary().unsigned(false),
    content: p.text().length(65535),
  },
});
",
]
`;

exports[`EntityGenerator advanced index options (MySQL) > generates entities with fulltext index > fulltext index 1`] = `
[
  "import { defineEntity, p } from '@mikro-orm/core';

export class TestFulltext {
  id!: number;
  content!: string;
}

export const TestFulltextSchema = defineEntity({
  class: TestFulltext,
  indexes: [{ name: 'fulltext_idx', properties: ['content'], type: 'fulltext' }],
  properties: {
    id: p.integer().primary().unsigned(false),
    content: p.text().length(65535),
  },
});
",
]
`;

exports[`EntityGenerator advanced index options (MySQL) > generates entities with invisible index > invisible index 1`] = `
[
  "import { defineEntity, p } from '@mikro-orm/core';

export class TestInvisible {
  id!: number;
  name!: string;
}

export const TestInvisibleSchema = defineEntity({
  class: TestInvisible,
  indexes: [{ name: 'invisible_idx', properties: ['name'], invisible: true }],
  properties: {
    id: p.integer().primary().unsigned(false),
    name: p.string(),
  },
});
",
]
`;

exports[`EntityGenerator advanced index options (MySQL) > generates entities with prefix length in index > prefix length index 1`] = `
[
  "import { defineEntity, p } from '@mikro-orm/core';

export class TestPrefix {
  id!: number;
  content!: string;
}

export const TestPrefixSchema = defineEntity({
  class: TestPrefix,
  indexes: [
    {
      name: 'prefix_idx',
      properties: ['content'],
      columns: [{ name: 'content', length: 100 }],
    },
  ],
  properties: {
    id: p.integer().primary().unsigned(false),
    content: p.text().length(65535),
  },
});
",
]
`;

exports[`EntityGenerator advanced index options > generates entities with advanced index options on a foreign key column > advanced index options on foreign key column 1`] = `
[
  "import { type Ref, defineEntity, p } from '@mikro-orm/core';
import { TestAdvFkTenant } from './TestAdvFkTenant';

export class TestAdvFkNode {
  id!: number;
  tenant!: Ref<TestAdvFkTenant>;
  owner!: Ref<TestAdvFkTenant>;
  name!: string;
}

export const TestAdvFkNodeSchema = defineEntity({
  class: TestAdvFkNode,
  indexes: [
    {
      name: 'adv_fk_covering_idx',
      properties: ['tenant'],
      include: ['name'],
      fillFactor: 70,
    },
  ],
  uniques: [
    { name: 'adv_fk_unique_idx', properties: ['owner'], include: ['name'] },
  ],
  properties: {
    id: p.integer().primary(),
    tenant: () => p.manyToOne(TestAdvFkTenant).ref().updateRule('no action').deleteRule('no action'),
    owner: () => p.manyToOne(TestAdvFkTenant).ref().updateRule('no action').deleteRule('no action'),
    name: p.string(),
  },
});
",
  "import { Collection, defineEntity, p } from '@mikro-orm/core';
import { TestAdvFkNode } from './TestAdvFkNode';

export class TestAdvFkTenant {
  id!: number;
  testAdvFkNodeCollection = new Collection<TestAdvFkNode>(this);
  testAdvFkNodeCollection1 = new Collection<TestAdvFkNode>(this);
}

export const TestAdvFkTenantSchema = defineEntity({
  class: TestAdvFkTenant,
  properties: {
    id: p.integer().primary(),
    testAdvFkNodeCollection: () => p.oneToMany(TestAdvFkNode).mappedBy('tenant'),
    testAdvFkNodeCollection1: () => p.oneToMany(TestAdvFkNode).mappedBy('owner'),
  },
});
",
]
`;

exports[`EntityGenerator advanced index options > generates entities with advanced index options on a foreign key column with standalone scalar properties > advanced index options on foreign key column with standalone scalar properties 1`] = `
[
  "import { type Ref, defineEntity, p } from '@mikro-orm/core';
import { TestAdvFkTenant } from './TestAdvFkTenant';

export class TestAdvFkNode {
  id!: number;
  tenant!: Ref<TestAdvFkTenant>;
  tenantId!: number;
  name!: string;
}

export const TestAdvFkNodeSchema = defineEntity({
  class: TestAdvFkNode,
  indexes: [
    {
      name: 'adv_fk_covering_idx',
      properties: ['tenantId'],
      include: ['name'],
      fillFactor: 70,
    },
  ],
  properties: {
    id: p.integer().primary(),
    tenant: () => p.manyToOne(TestAdvFkTenant).ref().updateRule('no action').deleteRule('no action'),
    tenantId: p.integer().persist(false),
    name: p.string(),
  },
});
",
  "import { Collection, defineEntity, p } from '@mikro-orm/core';
import { TestAdvFkNode } from './TestAdvFkNode';

export class TestAdvFkTenant {
  id!: number;
  testAdvFkNodeCollection = new Collection<TestAdvFkNode>(this);
}

export const TestAdvFkTenantSchema = defineEntity({
  class: TestAdvFkTenant,
  properties: {
    id: p.integer().primary(),
    testAdvFkNodeCollection: () => p.oneToMany(TestAdvFkNode).mappedBy('tenant'),
  },
});
",
]
`;

exports[`EntityGenerator advanced index options > generates entities with clustered index > clustered index 1`] = `
[
  "import { defineEntity, p } from '@mikro-orm/core';

export class TestClustered {
  id!: number;
  sortKey!: number;
}

export const TestClusteredSchema = defineEntity({
  class: TestClustered,
  properties: {
    id: p.integer().primary(),
    sortKey: p.integer().index('clustered_idx'),
  },
});
",
]
`;

exports[`EntityGenerator advanced index options > generates entities with collation in index > collation index 1`] = `
[
  "import { defineEntity, p } from '@mikro-orm/core';

export class TestCollation {
  id!: number;
  name!: string;
}

export const TestCollationSchema = defineEntity({
  class: TestCollation,
  indexes: [
    {
      name: 'collation_idx',
      properties: ['name'],
      columns: [{ name: 'name', collation: 'C' }],
    },
  ],
  properties: {
    id: p.integer().primary(),
    name: p.string(),
  },
});
",
]
`;

exports[`EntityGenerator advanced index options > generates entities with covering index (INCLUDE) > covering index 1`] = `
[
  "import { defineEntity, p } from '@mikro-orm/core';

export class TestInclude {
  id!: number;
  email!: string;
  name!: string;
  createdAt!: Date;
}

export const TestIncludeSchema = defineEntity({
  class: TestInclude,
  indexes: [
    {
      name: 'covering_idx',
      properties: ['email'],
      include: ['name', 'createdAt'],
    },
  ],
  properties: {
    id: p.integer().primary(),
    email: p.string(),
    name: p.string(),
    createdAt: p.datetime().columnType('timestamp(6)'),
  },
});
",
]
`;

exports[`EntityGenerator advanced index options > generates entities with fillFactor > fillFactor 1`] = `
[
  "import { defineEntity, p } from '@mikro-orm/core';

export class TestFillFactor {
  id!: number;
  name!: string;
}

export const TestFillFactorSchema = defineEntity({
  class: TestFillFactor,
  indexes: [{ name: 'fill_factor_idx', properties: ['name'], fillFactor: 70 }],
  properties: {
    id: p.integer().primary(),
    name: p.string(),
  },
});
",
]
`;

exports[`EntityGenerator advanced index options > generates entities with index type (GIN) > index type 1`] = `
[
  "import { defineEntity, p } from '@mikro-orm/core';

export class TestIndexType {
  id!: number;
  tags!: string[];
}

export const TestIndexTypeSchema = defineEntity({
  class: TestIndexType,
  indexes: [{ name: 'gin_idx', properties: ['tags'], type: 'gin' }],
  properties: {
    id: p.integer().primary(),
    tags: p.type(string[]),
  },
});
",
]
`;

exports[`EntityGenerator advanced index options > generates entities with partial index on a foreign key column > partial index on foreign key column 1`] = `
[
  "import { type Ref, defineEntity, p } from '@mikro-orm/core';
import { TestPartialTenant } from './TestPartialTenant';

export class TestPartialNode {
  id!: number;
  tenant!: Ref<TestPartialTenant>;
  slug?: string;
  parentId?: number;
}

export const TestPartialNodeSchema = defineEntity({
  class: TestPartialNode,
  indexes: [
    { name: 'partial_slug_idx', where: 'parent_id IS NULL', properties: ['slug'] },
  ],
  uniques: [
    {
      name: 'partial_single_root_idx',
      where: 'parent_id IS NULL',
      properties: ['tenant'],
    },
  ],
  properties: {
    id: p.integer().primary(),
    tenant: () => p.manyToOne(TestPartialTenant).ref().updateRule('no action').deleteRule('no action'),
    slug: p.string().nullable(),
    parentId: p.integer().nullable(),
  },
});
",
  "import { Collection, defineEntity, p } from '@mikro-orm/core';
import { TestPartialNode } from './TestPartialNode';

export class TestPartialTenant {
  id!: number;
  testPartialNodeCollection = new Collection<TestPartialNode>(this);
}

export const TestPartialTenantSchema = defineEntity({
  class: TestPartialTenant,
  properties: {
    id: p.integer().primary(),
    testPartialNodeCollection: () => p.oneToMany(TestPartialNode).mappedBy('tenant'),
  },
});
",
]
`;

exports[`EntityGenerator advanced index options > generates entities with partial index on a foreign key column with standalone scalar properties > partial index on foreign key column with standalone scalar properties 1`] = `
[
  "import { type Ref, defineEntity, p } from '@mikro-orm/core';
import { TestPartialTenant } from './TestPartialTenant';

export class TestPartialNode {
  id!: number;
  tenant!: Ref<TestPartialTenant>;
  tenantId!: number;
  parentId?: number;
}

export const TestPartialNodeSchema = defineEntity({
  class: TestPartialNode,
  uniques: [
    {
      name: 'partial_single_root_idx',
      where: 'parent_id IS NULL',
      properties: ['tenantId'],
    },
  ],
  properties: {
    id: p.integer().primary(),
    tenant: () => p.manyToOne(TestPartialTenant).ref().updateRule('no action').deleteRule('no action'),
    tenantId: p.integer().persist(false),
    parentId: p.integer().nullable(),
  },
});
",
  "import { Collection, defineEntity, p } from '@mikro-orm/core';
import { TestPartialNode } from './TestPartialNode';

export class TestPartialTenant {
  id!: number;
  testPartialNodeCollection = new Collection<TestPartialNode>(this);
}

export const TestPartialTenantSchema = defineEntity({
  class: TestPartialTenant,
  properties: {
    id: p.integer().primary(),
    testPartialNodeCollection: () => p.oneToMany(TestPartialNode).mappedBy('tenant'),
  },
});
",
]
`;

exports[`EntityGenerator advanced index options > generates entities with sort order and NULLS ordering > sort and nulls ordering 1`] = `
[
  "import { defineEntity, p } from '@mikro-orm/core';

export class TestSortNulls {
  id!: number;
  name!: string;
  createdAt!: Date;
}

export const TestSortNullsSchema = defineEntity({
  class: TestSortNulls,
  indexes: [
    {
      name: 'sort_nulls_idx',
      properties: ['createdAt', 'name'],
      columns: [
        { name: 'createdAt', sort: 'DESC', nulls: 'LAST' },
        { name: 'name' },
      ],
    },
  ],
  properties: {
    id: p.integer().primary(),
    name: p.string(),
    createdAt: p.datetime().columnType('timestamp(6)'),
  },
});
",
]
`;

exports[`EntityGenerator advanced index options > generates entities with unique constraint and advanced options > unique with advanced options 1`] = `
[
  "import { defineEntity, p } from '@mikro-orm/core';

export class TestUniqueOpts {
  id!: number;
  email!: string;
  name!: string;
}

export const TestUniqueOptsSchema = defineEntity({
  class: TestUniqueOpts,
  uniques: [
    {
      name: 'unique_with_include',
      properties: ['email'],
      include: ['name'],
      fillFactor: 80,
    },
  ],
  properties: {
    id: p.integer().primary(),
    email: p.string(),
    name: p.string(),
  },
});
",
]
`;

exports[`EntityGenerator advanced index options > generates entities with unique constraint with sort order > unique with sort order 1`] = `
[
  "import { defineEntity, p } from '@mikro-orm/core';

export class TestUniqueSort {
  id!: number;
  email!: string;
  createdAt!: Date;
}

export const TestUniqueSortSchema = defineEntity({
  class: TestUniqueSort,
  uniques: [
    {
      name: 'unique_sort_idx',
      properties: ['email', 'createdAt'],
      columns: [{ name: 'email', sort: 'DESC' }, { name: 'createdAt' }],
    },
  ],
  properties: {
    id: p.integer().primary(),
    email: p.string(),
    createdAt: p.datetime().columnType('timestamp(6)'),
  },
});
",
]
`;
